# rag_classifier

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
app/: auth.py  config.py  db.py  graph.py  main.py  models.py  parsers.py  rag.py
data/docs/: sample.txt
static/: styles.css
templates/: analysis.html  dashboard.html  index.html
tests/: test_smoke.py
