[project]
name = "rag-classifier"
version = "0.1.0"
description = "RAG classifier using LangGraph and Ollama"
authors = [
    {name = "maciejmar",email = "memgos@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60,<1.0.0",
    "ollama>=0.4.7,<1.0.0",
    "numpy>=2.0.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "qdrant-client>=1.12.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
