[project]
name = "rag-classifier"
version = "0.1.0"
description = "RAG classifier using LangGraph and Ollama"
authors = [
    {name = "maciejmar",email = "memgos@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "langgraph>=0.2.60,<1.0.0",
    "ollama>=0.4.7,<1.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pypdf>=5.1.0,<6.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "qdrant-client>=1.12.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
